fix(EST-2351-FE): add y-scroll bar to matTooltip hovering the label chips with long path with scrollbar fow now

--- a/frontend/src/styles/_material.scss
+++ b/frontend/src/styles/_material.scss
@@ -28,3 +28,8 @@ $compact-theme: mat.define-theme(
         0 6px 10px 4px rgba(0, 0, 0, 0.15),
         0 2px 3px 0 rgba(0, 0, 0, 0.3);
 }
+
+.allow-scroll-tooltip .mdc-tooltip__surface {
+    max-height: 225px;
+    overflow-y: auto;
+}
